--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "jest-teamcity-reporter": "^0.9.0",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.5.2",
+    "mockdate": "^3.0.5",
     "msw": "^0.48.2",
     "msw-storybook-addon": "^1.6.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
