--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "fetch-mock": "^9.11.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^1.3.1",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^27.3.1",
     "jest-teamcity-reporter": "^0.9.0",
     "lint-staged": "^13.0.3",
