--- a/package.json
+++ b/package.json
@@ -144,10 +144,11 @@
     "@emotion/react": "^11.9.0",
     "@guardian/ab-core": "^2.0.0",
     "@guardian/ab-react": "^2.0.1",
-    "@guardian/consent-management-platform": "^6.11.3",
-    "@guardian/libs": "^1.7.1",
+    "@guardian/consent-management-platform": "^8.0.0",
+    "@guardian/libs": "^3.0.0",
     "@guardian/source-foundations": "^5.0.0",
     "@guardian/source-react-components": "^5.0.0",
+    "@guardian/source-react-components-development-kitchen": "^1.0.0",
     "@sentry/browser": "^5.22.3",
     "@sentry/node": "^5.22.3",
     "@stripe/react-stripe-js": "^1.1.2",
@@ -175,6 +176,7 @@
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.5.9",
+    "web-vitals": "^2.0.0",
     "winston": "^3.2.1",
     "yup": "^0.28.2"
   },
