--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "raw-loader": "^4.0.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.7",
+    "tslib": "^2.4.1",
     "typescript": "^4.4.4",
     "utility-types": "^3.10.0",
     "uuid": "^8.3.2",
@@ -144,8 +145,8 @@
     "@emotion/react": "^11.9.0",
     "@guardian/ab-core": "^2.0.0",
     "@guardian/ab-react": "^2.0.1",
-    "@guardian/consent-management-platform": "^6.11.3",
-    "@guardian/libs": "^1.7.1",
+    "@guardian/consent-management-platform": "^11.0.0",
+    "@guardian/libs": "^10.0.0",
     "@guardian/source-foundations": "^5.0.0",
     "@guardian/source-react-components": "^5.0.0",
     "@sentry/browser": "^5.22.3",
