Update ubuntu jammy to use new recipe
- node version does not actually match but this is a test to see if it will work anyway

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -19,7 +19,7 @@ deployments:
         CODE: ManageFrontend-CODE.template.json
         PROD: ManageFrontend-PROD.template.json
       amiTags:
-        Recipe: manage-frontend-arm-node16
+        Recipe: jammy-membership-node18
         AmigoStage: PROD
       amiEncrypted: true
       amiParameter: AMIManagefrontend
